--- a/views/layout.haml
+++ b/views/layout.haml
@@ -13,7 +13,7 @@
     %meta{ property: 'og:description', content: desc }
     %meta{ property: 'og:site_name', content: title }
     
-    %script{ type: "text/javascript", src: '/js/jquery.js' }
+    %script{ type: "text/javascript", src: 'https://ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js' }
     %script{ type: "text/javascript", src: '/js/jquery.transit.js' }
     %script{ type: "text/javascript", src: '/js/app.js' }
     %link{ rel: 'stylesheet', type: "text/css", href: '/css/app.css' }
