Fixed og:image path

--- a/views/layout.haml
+++ b/views/layout.haml
@@ -8,7 +8,7 @@
     
     %meta{ name: 'description', content: desc }
     
-    %meta{ property: 'og:image', content: env['SERVER_NAME'] + "/images/modlogo.png" }
+    %meta{ property: 'og:image', content: "http://" + env['SERVER_NAME'] + "/images/modlogo.png" }
     %meta{ property: 'og:title', content: title }
     %meta{ property: 'og:description', content: desc }
     %meta{ property: 'og:site_name', content: title }
