Fixed og:url path

--- a/views/layout.haml
+++ b/views/layout.haml
@@ -8,6 +8,7 @@
     
     %meta{ name: 'description', content: desc }
     
+    %meta{ property: 'og:url', content: "http://midwivesofdiscord.com" }
     %meta{ property: 'og:image', content: "http://" + env['SERVER_NAME'] + "/images/modlogo.png" }
     %meta{ property: 'og:title', content: title }
     %meta{ property: 'og:description', content: desc }
