Fixed og:type to 'band'

--- a/views/layout.haml
+++ b/views/layout.haml
@@ -10,6 +10,7 @@
     
     %meta{ property: 'og:url', content: "http://midwivesofdiscord.com" }
     %meta{ property: 'og:image', content: "http://" + env['SERVER_NAME'] + "/images/modlogo.png" }
+    %meta{ property: 'og:type', content: "band" }
     %meta{ property: 'og:title', content: title }
     %meta{ property: 'og:description', content: desc }
     %meta{ property: 'og:site_name', content: title }
