--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -30,9 +30,33 @@ header
   text-align: center
   border-bottom: 1px solid rgba(255,255,255,.1)
   overflow: hidden
-  img
+  img#logo
     width: 250px
     margin: 10px
+  
+  a.social-button
+    position: absolute
+    width: 44px
+    height: 44px
+    border: 1px solid rgba(0,0,0,.5)
+    +box-shadow-inset(1px,1px,10px,rgba(0,0,0,.5))
+    +border-radius(3px)
+    +transition(all .2s ease-in-out)
+    &:hover
+      +box-shadow-inset(1px,1px,12px,rgba(0,0,0,.7))
+    &:focus, &:active
+      +box-shadow-inset(1px,1px,15px,rgba(0,0,0,1))
+  
+  a#facebook
+    bottom: 15px
+    left: 70px
+    background-image: url(/images/fb.png)
+    
+  a#youtube
+    bottom: 15px
+    left: 10px
+    background-image: url(/images/yt.png)
+    
   &:before
     @media (max-width: $phone)
       content: ""
