Removed titles from Cogs

--- a/views/layout.haml
+++ b/views/layout.haml
@@ -22,11 +22,11 @@
 
   %body
     .mod-effect.mod-effect-left
-      %img#logo{ src: "/images/cog1.png", title: "Midwives of Discord Logo" }
-      %img#logo{ src: "/images/cog2.png", title: "Midwives of Discord Logo" }
+      %img#logo{ src: "/images/cog1.png" }
+      %img#logo{ src: "/images/cog2.png" }
     .mod-effect.mod-effect-right
-      %img#logo{ src: "/images/cog3.png", title: "Midwives of Discord Logo" }
-      %img#logo{ src: "/images/cog4.png", title: "Midwives of Discord Logo" }
+      %img#logo{ src: "/images/cog3.png" }
+      %img#logo{ src: "/images/cog4.png" }
     .container
       %header
         %a.social-button#youtube{ href: 'http://www.youtube.com/user/midwivesofdiscord'}
