--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -29,6 +29,7 @@ header
   min-height: 160px
   text-align: center
   border-bottom: 1px solid rgba(255,255,255,.1)
+  background-image: url(/images/headtexture.png)
   overflow: hidden
   img#logo
     width: 250px
