Added Google Apps varification meta tag

--- a/views/layout.haml
+++ b/views/layout.haml
@@ -15,6 +15,9 @@
     %meta{ property: 'og:description', content: desc }
     %meta{ property: 'og:site_name', content: title }
     
+    // Google Apps Verification
+    %meta{ name: "google-site-verification", content: "8gOf7olPI9O40oEQV4kViB5ORKGcNlU1i5UYaDspkO0" }
+    
     %script{ type: "text/javascript", src: '/_js/jquery.js' }
     %script{ type: "text/javascript", src: '/_js/jquery.transit.js' }
     %script{ type: "text/javascript", src: '/js/app.js' }
