--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -140,3 +140,22 @@ nav
     &:last-child
       bottom: -50px
       left: -350px
+
+h1
+  color: #FEFEFE
+  text-shadow: 2px 2px 2px rgba(0,0,0,.5), 0 0 1px rgba(0,0,0,1)
+
+article
+  padding: 20px
+  margin-bottom: 20px
+  
+  background: #F0F0F0
+  
+  color: #333333
+  text-shadow: 1px 1px 1px #fff
+  
+  border: 1px solid rgba(0,0,0,.8)
+  +box-shadow(2px,2px,50px, rgba(0,0,0,.4))
+  // +border-radius(3px)
+  p
+    line-height: 1.7em
