Added smooth scrolling to anchor tags

--- a/views/layout.haml
+++ b/views/layout.haml
@@ -20,6 +20,7 @@
     
     %script{ type: "text/javascript", src: '/_js/jquery.js' }
     %script{ type: "text/javascript", src: '/_js/jquery.transit.js' }
+    %script{ type: "text/javascript", src: '/_js/softscroll.js' }
     %script{ type: "text/javascript", src: '/js/app.js' }
     %link{ rel: 'stylesheet', type: "text/css", href: '/css/app.css' }
 
