--- a/views/root.haml
+++ b/views/root.haml
@@ -1,4 +1,4 @@
-%section#about
+%section#about{ name: "about" }
   %h1= "About"
   %article
     %h3= "What is MoD ?"
@@ -15,7 +15,7 @@
 
     %p= "Zeeraw is MoD's eyes. Said to be windows to the soul, this really does apply to Zeeraw. Reading his bandmate's wishes, he instinctively understands what his part needs to be. Bringing a touch of elegance through his voice, Zeeraw gives his best and carries the emotion of the songs."
 
-%section#listen
+%section#listen{ name: "listen" }
   %h1= "Listen"
   %iframe{:allowtransparency => "true", :frameborder => "0", :height => "410", :src => "http://bandcamp.com/EmbeddedPlayer/v=2/album=442045135/size=grande3/bgcol=FFFFFF/linkcol=ffffff/transparent=true/", :style => "position: relative; display: block; width: 300px; height: 410px;", :width => "300"}
     %a{:href => "http://midwivesofdiscord.bandcamp.com/album/album-name-goes-here"} <ALBUM NAME GOES HERE> by Midwives Of Discord
