--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -141,6 +141,9 @@ nav
       bottom: -50px
       left: -350px
 
+section
+  margin-bottom: 100px
+
 h1
   color: #FEFEFE
   text-shadow: 2px 2px 2px rgba(0,0,0,.5), 0 0 1px rgba(0,0,0,1)
