--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -21,7 +21,7 @@ body
     width: auto
     margin: 20px
   @media (min-width: $desktop-s-min)
-    width: 780px
+    width: 760px
     margin: 20px auto
 
 header
@@ -107,7 +107,7 @@ nav
   top: 0
   bottom: 0
   width: 100px
-  background: #000
+  background: #1E1E1E
   overflow: hidden
   @media (max-width: $ipad-max)
     display: none
@@ -119,7 +119,7 @@ nav
   
 .mod-effect-left
   left: 0
-  border-right: 1px solid rgba(255,255,255,.1)
+  border-right: 1px solid rgba(255,255,255,.2)
   +box-shadow-inset(-3px,0px,50px,rgba(0,0,0,.3))
   img
     &:first-child
@@ -130,7 +130,7 @@ nav
       right: -70px
 .mod-effect-right
   right: 0
-  border-left: 1px solid rgba(255,255,255,.1)
+  border-left: 1px solid rgba(255,255,255,.2)
   +box-shadow-inset(3px,0px,50px,rgba(0,0,0,.3))
   img
     &:first-child
@@ -143,6 +143,12 @@ nav
 
 section
   margin-bottom: 100px
+  @media (max-width: $ipad-max)
+    margin-left: 10px
+    margin-right: 10px
+  @media (min-width: $desktop-s-min)
+    margin-right: 0
+    margin-left: 0
 
 h1
   color: #FEFEFE
@@ -162,3 +168,87 @@ article
   // +border-radius(3px)
   p
     line-height: 1.7em
+
+ul.album-list
+  list-style: none
+  padding: 0
+  li
+    position: relative
+    background: #F0F0F0
+    border: 1px solid rgba(0,0,0,.8)
+    +box-shadow(2px,2px,50px, rgba(0,0,0,.4))
+    color: #333333
+    text-shadow: 1px 1px 1px #fff
+    &:after
+      content: "."
+      display: block
+      height: 0
+      clear: both
+      visibility: hidden
+    
+    & > span
+      
+      font-size: 14px
+      
+      @media (max-width: $phone)
+        display: block
+        padding: 10px
+        
+        text-align: right
+        
+        border-top: 1px solid #333
+        background: #FEFEFE
+      @media (min-width: $ipad-min)
+        position: absolute
+        right: 0
+        top: 0
+        margin: 20px    
+
+.press-container
+  
+  min-height: 160px
+  padding: 20px
+
+  background: rgba(0,0,0,.1)
+  @each $vendor in -moz-, -o-, -webkit-, ""
+    #{$vendor}box-shadow: inset 0 0 5px rgba(0,0,0,.3), 0 1px 1px rgba(255,255,255,.2)
+    
+  +border-radius(10px)
+  border: 1px solid rgba(0,0,0,.4)
+  
+  h3, p
+    color: #CCC
+    text-shadow: -1px -1px 1px rgba(0,0,0,.7)
+  
+  a
+    margin-bottom: 10px
+    padding: 9px 12px
+    
+    font-size: 18px
+    line-height: 22px
+    color: #FEFEFE
+    text-shadow: -1px -1px 1px rgba(0,0,0,.3)
+    text-decoration: none
+    // font-weight: bold
+    
+    background: #9A0791
+    
+    border-color: darken(#9A0791,20%)
+    border-width: 2px 2px 5px 2px
+    border-style: solid
+    
+    +border-radius(6px)
+    
+    @media (max-width: $phone)
+      display: block
+    @media (min-width: $ipad-min)
+      display: inline-block
+      margin-right: 10px
+    
+    
+    &:hover
+      background: darken(#9A0791,4%)
+    
+    &:focus, &:active
+      border-width: 2px 2px 3px 2px
+      line-height: 24px
