Added tags and viewport meta tags

--- a/views/layout.haml
+++ b/views/layout.haml
@@ -6,7 +6,10 @@
     
     - desc = "Created by Obelion, Sickness, Bosko and Zeeraw, Midwives Of Discord is a band that blends Metal, Electro and Rap to come up with the freshest sounds it can!"
     
+    %meta{ name: 'author', content: 'Zeeraw' }
     %meta{ name: 'description', content: desc }
+    %meta{ name: 'keywords', content: 'zeeraw dawnblush dawn blush obelion bosko sickness midwives of discord midwivesofdiscord mlp metal dubstep music band guitar song rap synth gear cog steampunk' }
+    %meta{ name: "viewport", :content => "user-scalable=no, width=device-width", :id => "view"}
     
     %meta{ property: 'og:url', content: "http://midwivesofdiscord.com" }
     %meta{ property: 'og:image', content: "http://" + env['SERVER_NAME'] + "/images/modlogo.png" }
