Hide overflow on album-list items

--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -179,6 +179,7 @@ ul.album-list
     +box-shadow(2px,2px,50px, rgba(0,0,0,.4))
     color: #333333
     text-shadow: 1px 1px 1px #fff
+    overflow: hidden
     &:after
       content: "."
       display: block
