--- a/views/root.haml
+++ b/views/root.haml
@@ -12,17 +12,25 @@
   %article
     %h3= "What is MoD ?"
 
-    %p= "Formed in March 2012 by Bosko, Obelion and Sickness, Midwives Of Discord is it's own breed of musical project. Featuring musicians coming from completely different worlds adding their respective skillets so the mix, MoD has grown into a daring band, creating the freshest music it can. The constant eagerness for improvement driving them to recruit a fourth member, Zeeraw, making the band more complete and enabling them to push their boundaries." 
+    %p= "Formed in March 2012 by Bosko, Obelion and Sickness, Midwives Of Discord is it's own breed of musical project. Featuring musicians coming from completely different worlds adding their respective skill sets so the mix, MoD has grown into a daring band, creating the freshest sounds it can. The constant eagerness for improvement driving them to recruit a fourth member, Zeeraw, putting the last piece in place and enabling them to push their boundaries. " 
 
     %h3= "Anatomy ?"
 
-    %p= "Obelion forms the skeleton of the band, his electronic music and piano playing are the foundations upon which the band builds it's music. From epic string arrangements, wholesome basses, powerful stabs to jagged beats, Obelion's classical music knowledge and piano expertise pushes him to write melodic music that never fails to amaze and inspire his bandmates."
+    %p
+      %strong= "Obelion"
+      = "forms the skeleton of the band, his electronic music and piano playing are the foundations upon which the band builds it's music. From epic string arrangements, wholesome basses, powerful stabs to jagged beats, Obelion's classical music knowledge and piano expertise pushes him to write melodic music that never fails to amaze and inspire his bandmates."
 
-    %p= "Bosko represents the brain. Producing, mixing and brainstorming ideas for Obelion's songs is his forte. Once inspired, he relentlessly works to make the band's artistic vision come true, finding new ways to mix and transform sound. Bosko's true nerd nature really bursts out once he's behind his digital audio workstation. Providing his experience as a metal guitar player and singer, he also assist's in writing lyrics."
+    %p 
+      %strong= "Bosko"
+      = " represents the brain. Producing, mixing and brainstorming ideas for Obelion's songs is his forte. Once inspired, he relentlessly works to make the band's artistic vision come true, finding new ways to mix and transform sound. Bosko's true nerd nature really bursts out once he's behind his digital audio workstation. Providing his experience as a metal guitar player and singer, he also assists in writing lyrics."
 
-    %p= "Sickness is the muscle, his lyrics and flow drive the point home. His strength lies in the quality of his texts, delivering emotion and dark ambiance. Sickness challenges himself on every song and really writes from the heart, making sure every sillaby is perfect before submitting his lyrics to the band."
+    %p
+      %strong= "Sickness"
+      = " is the muscle, his lyrics and flow drive the point home. His strength lies in the quality of his texts, delivering emotion and dark ambiance. Sickness challenges himself on every song and really writes from the heart, making sure every syllable is true to the song before recording his lyrics."
 
-    %p= "Zeeraw is MoD's eyes. Said to be windows to the soul, this really does apply to Zeeraw. Reading his bandmate's wishes, he instinctively understands what his part needs to be. Bringing a touch of elegance through his voice, Zeeraw gives his best and carries the emotion of the songs."
+    %p
+      %strong="Zeeraw"
+      = " is MoD's eyes. Said to be windows to the soul, this really does apply to Zeeraw. Reading his bandmate's wishes, he instinctively understands what his part needs to be. Bringing a touch of elegance through his voice, Zeeraw gives his best and carries the emotion of the songs."
 
 %section#press
   %h1= "Press"
