corrections in about text

--- a/views/root.haml
+++ b/views/root.haml
@@ -12,7 +12,7 @@
   %article
     %h3= "What is MoD ?"
 
-    %p= "Formed in March 2012 by Bosko, Obelion and Sickness, Midwives Of Discord is it's own breed of musical project. Featuring musicians coming from completely different worlds adding their respective skill sets so the mix, MoD has grown into a daring band, creating the freshest sounds it can. The constant eagerness for improvement driving them to recruit a fourth member, Zeeraw, putting the last piece in place and enabling them to push their boundaries. " 
+    %p= "Formed in March 2012 by Bosko, Obelion and Sickness, Midwives Of Discord is it's own breed of musical project. Featuring musicians coming from completely different worlds adding their respective skill sets so the mix, MoD has grown into a daring band, creating the freshest sounds it can. The constant eagerness for improvement driving them to recruit a fourth member, Zeeraw, put the last piece in place and enabled them to push their boundaries. " 
 
     %h3= "Anatomy ?"
 
