--- a/views/root.haml
+++ b/views/root.haml
@@ -37,12 +37,13 @@
   .press-container
     %h3= "Do you need present Midwives of Discord in an article?"
     %p= "Here we have a press pack which includes vector logos, samples & a press book."
-    %a.press-download{ href: "/" }
-      = "Download Press Pack"
-      / = " - "
-      %strong= "( .zip )"
-      
-    %a.press-download{ href: "/" }
-      = "Download Press Pack"
-      / = " - "
-      %strong= "( .rar )"
+    %center
+      %a.press-download{ href: "/" }
+        = "Download Press Pack"
+        / = " - "
+        %strong= "( .zip )"
+        
+      %a.press-download{ href: "/" }
+        = "Download Press Pack"
+        / = " - "
+        %strong= "( .rar )"
