Changed the alignment of download buttons.

--- a/views/root.haml
+++ b/views/root.haml
@@ -37,7 +37,7 @@
   .press-container
     %h3= "Do you need present Midwives of Discord in an article?"
     %p= "Here we have a press pack which includes vector logos, samples & a press book."
-    %center
+    %center{ style: 'text-align: center;'}
       %a.press-download{ href: "/" }
         = "Download Press Pack"
         / = " - "
