--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -221,6 +221,9 @@ ul.album-list
     color: #CCC
     text-shadow: -1px -1px 1px rgba(0,0,0,.7)
   
+  p
+    margin-bottom: 30px
+  
   a
     margin-bottom: 10px
     padding: 9px 12px
