--- a/views/root.haml
+++ b/views/root.haml
@@ -38,12 +38,12 @@
     %h3= "Do you need present Midwives of Discord in an article?"
     %p= "Here we have a press pack which includes vector logos, samples & a press book."
     %center{ style: 'text-align: center;'}
-      %a.press-download{ href: "/other/MidwivesOfDiscord-Presspack.zip" }
+      %a.press-download{ href: "/other/MidwivesOfDiscord-Presspack.zip", ref: :nofollow }
         = "Download Press Pack"
         / = " - "
         %strong= "( .zip )"
         
-      %a.press-download{ href: "/other/MidwivesOfDiscord-Presspack.rar" }
+      %a.press-download{ href: "/other/MidwivesOfDiscord-Presspack.rar", ref: :nofollow }
         = "Download Press Pack"
         / = " - "
         %strong= "( .rar )"
