--- a/views/layout.haml
+++ b/views/layout.haml
@@ -26,6 +26,18 @@
     %script{ type: "text/javascript", src: '/_js/softscroll.js' }
     %script{ type: "text/javascript", src: '/js/app.js' }
     %link{ rel: 'stylesheet', type: "text/css", href: '/css/app.css' }
+    
+    - if env['HTTP_HOST'] =~ /midwivesofdiscord.com/
+      :javascript
+        var _gaq = _gaq || [];
+        _gaq.push(['_setAccount', 'UA-33554060-2']);
+        _gaq.push(['_trackPageview']);
+
+        (function() {
+          var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+          ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+          var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+        })();
 
   %body
     .mod-effect.mod-effect-left
@@ -46,4 +58,6 @@
         %a{ href: "#press" }= "Press"
       .content= yield
       %footer
+    
+    
     
