Added Google Webmaster Verification meta tag

--- a/views/layout.haml
+++ b/views/layout.haml
@@ -20,6 +20,8 @@
     
     // Google Apps Verification
     %meta{ name: "google-site-verification", content: "8gOf7olPI9O40oEQV4kViB5ORKGcNlU1i5UYaDspkO0" }
+    // Google Webmaster Verification
+    %meta{ name: "google-site-verification", content: "dUI1IcK96hYm5JKSMArbXCi1Jf6t6usEsojk5P2IGKE" }
     
     %script{ type: "text/javascript", src: '/_js/jquery.js' }
     %script{ type: "text/javascript", src: '/_js/jquery.transit.js' }
