Added facebook like button LIKE A BAWS

--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -31,9 +31,15 @@ header
   border-bottom: 1px solid rgba(255,255,255,.1)
   background-image: url(/images/headtexture.png)
   overflow: hidden
+  
   img#logo
     width: 250px
     margin: 10px
+  
+  .fb-like
+    position: absolute
+    left: 15px
+    top: 15px
   
   a.social-button
     position: absolute
