--- a/views/layout.haml
+++ b/views/layout.haml
@@ -42,6 +42,7 @@
         })();
 
   %body
+    #fb-root
     .mod-effect.mod-effect-left
       %img#logo{ src: "/images/cog1.png" }
       %img#logo{ src: "/images/cog2.png" }
@@ -50,6 +51,7 @@
       %img#logo{ src: "/images/cog4.png" }
     .container
       %header
+        .fb-like{"data-colorscheme" => "dark", "data-font" => "verdana", "data-href" => "http://www.midwivesofdiscord.com", "data-layout" => "button_count", "data-send" => "false", "data-show-faces" => "true", "data-width" => "50"}
         %a.social-button#youtube{ href: 'http://www.youtube.com/user/midwivesofdiscord'}
         %a.social-button#facebook{ href: 'http://facebook.com/midwivesofdiscord'}
         %a{ href: '/' }
